Tue Feb 29 15:14:56 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From 2000-02-22 Stephane Carrez <stcarrez@worldnet.fr>:
        * dwarf2read.c (read_address): Read 16-bits addresses.

2000-02-28  Scott Bambrough <scottb@netwinder.org>

	* arm-linux-nat.c (fetch_nw_fpe_*):
 	Renamed to fetch_nwfpe_* to use the same naming convention
	as in the Linux kernel.  Modified prototype to get rid of
	unused parameters.
	(store_nw_fpe_*): Renamed to store_nwfpe_* to use the same
	naming convention as in the Linux kernel.  Fixed calls to 
	fetch_nwfpe_*.
	(store_fpregs): Fixed calls to store_nwfpe_*.  Removed
	unused variable. 

Mon Feb 28 18:24:32 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* MAINTAINERS: Transfer d30v maintainership to David Taylor.

2000-02-28  Christopher Faylor  <cgf@cygnus.com>

	* win32-nat.c: Remove unneeded header.
	* wince.c: Ditto.

Mon Feb 28 13:34:54 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* wince.c: Include "gdb_wait.h" and not "wait.h".

Mon Feb 28 10:58:45 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* MAINTAINERS: Mention mmalloc.  Expand Host/Native and
 	Target/Architecture maintainers descriptions.

2000-02-26  Mark Kettenis  <kettenis@gnu.org>

	* gnu-nat.c: Include "gdbthread.h".  Include <hurd.h>.
	Reorder headers a bit.  Overall cleanup and minor reformatting.
	(MIG_SERVER_DIED): Remove define.
	(proc_update_sc): Add braces to silence compiler warning.
	(proc_steal_exc_port): Initialize err to zero.
	(make_proc): Add braces to silence compiler warning.
	(inf_validate_task_sc): Add cast to silence compiler warning.
	(inf_set_traced): Reorganize a bit to silence compiler warning.
	(inf_validate_procs): Use mach_msg_type_number_t for all thread
	numbers and add braces to silence compiler warning.
	(gnu_wait): Add prototypes for server functions and add braces to
	silence compiler warnings.
	(S_exception_raise_request): Pass subcode to inf_debug call.
	(gnu_write_inferior): Remove unused variable `protection_changed'.